# clone

./: .gitignore  Cargo.toml
assets/: dynamic_asset.assets
assets/levels/: reckoning.ldtk
crates/global_state/: Cargo.toml
crates/global_state/macros/: Cargo.toml
crates/global_state/macros/src/: lib.rs
crates/global_state/src/: lib.rs
src/: asset.rs  audio.rs  camera.rs  input.rs  lib.rs  menu.rs  npc.rs  physics.rs  player.rs  save.rs  splash_screen.rs  state.rs  tilemap.rs  ui.rs  weapon.rs
src/player/: systems.rs
src/tilemap/: check_point.rs
src/ui/: audio.rs  control.rs  menu.rs  options.rs  save.rs
