[package]
name = "reckoning"
version = "0.1.0"
edition = "2021"
rust = "1.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy_ecs_ldtk = "0.3.0"
bevy_egui = "0.14.0"
bevy_rapier2d = { git = "https://github.com/dimforge/bevy_rapier", rev="aa19749" }
bevy-inspector-egui = "0.11.0"
float-ord = "0.3.0"
leafwing-input-manager = "0.4.0"
move_vis = { git = "https://github.com/chungwong/move_vis.git" }

[features]
debug = []
