[package]
name = "reckoning"
version = "0.1.0"
edition = "2021"
rust = "1.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset_loader = { version = "0.12.0", features = ["stageless", "dynamic_assets"] }
bevy_ecs_ldtk = "0.4.0"
bevy_egui = "0.15.0"
bevy_rapier2d = "0.16.0"
bevy-inspector-egui = "0.12.0"
bevy_kira_audio = { version = "0.12.0", features = ["mp3"] }
global_state = { path = "./crates/global_state" }
float-ord = "0.3.0"
iyes_loopless = "0.7.0"
leafwing-input-manager = "0.5.1"
move_vis = { git = "https://github.com/chungwong/move_vis.git", rev ="7d0e981" }
savefile="0.10"
savefile-derive="0.10"

[dependencies.bevy]
version = "0.8.1"
default-features = false

features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "filesystem_watcher",
  "dynamic",
]

# https://github.com/tesselode/kira/issues/24
[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[features]
debug = []
