[package]
name = "global_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.0", default_features = false }
iyes_loopless = "0.9.0"
global_state_macros = { path = "./macros" }
